# simple-amm-near

./: Cargo.toml  README.md
contract/: Cargo.toml
contract/src/: lib.rs
contract/tests/: contract.rs
res/: orderly_contract.wasm  test_token.wasm
src/: lib.rs
test-token/: Cargo.toml
test-token/src/: lib.rs
