[package]
name = "orderly-contract"
version = "1.0.0"
authors = ["Mario Reder <mario.reder@pm.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4"
near-contract-standards = "4"
serde = "1"
serde_json = "1"

[dev-dependencies]
anyhow = "1"
test-token = { path = "../test-token" }
tokio = { version = "1", features = ["full"] }
workspaces = "0.3"
